# firewaterburn

./: .gitignore  README.md
firewaterburn/: CMakeLists.txt  prj.common.conf  prj.conf  prj.debug.conf  prj.release.conf
firewaterburn/boards/arm/fire_board/: Kconfig.board  Kconfig.defconfig  board.cmake  fire_board-pinctrl.dtsi  fire_board.dts  fire_board.yaml  fire_board_defconfig
firewaterburn/boards/arm/fire_board_bak/: Kconfig.board  fire_board-pinctrl.dtsi  fire_board.dts  fire_board_defconfig
firewaterburn/fonts/raw/: channel.xcf
firewaterburn/src/: main.c
firewaterburn/src/application/: application_init.c
firewaterburn/src/peripheral/: CMakeLists.txt  PERI_adc.c  PERI_adc.h  adc_controller.c  adc_controller.h  adc_probe.c  adc_probe.h  display.c  display.h  io_controller.c  io_controller.h  pd_controller.c  pd_controller.h  pd_controller_register.h
firmware/: CMakeLists.txt  prj.conf  prj.debug.conf  prj.minsizerel.conf  prj.release.conf
firmware/boards/arm/fire_board/: Kconfig.board  Kconfig.defconfig  fire_board-pinctrl.dtsi  fire_board.dts  fire_board_defconfig
firmware/boards/arm/fire_board_bak/: Kconfig.board  Kconfig.defconfig  board.cmake  fire_board-pinctrl.dtsi  fire_board.dts  (+2 more)
firmware/fonts/raw/: bluetooth.xcf  sig_strength.xcf
firmware/src/: main.c
firmware/src/application/: application_init.h
firmware/src/peripheral/: CMakeLists.txt  adc_controller.c  adc_controller.h  adc_probe.c  adc_probe.h  analog.c  analog.h  display.c  display.h  io_controller.c  io_controller.h  pd_controller.c  pd_controller.h  pd_controller_register.h
(+62 files in other folders)
